complete company table

--- a/insertData/stu_addForm.htm
+++ b/insertData/stu_addForm.htm
@@ -10,7 +10,7 @@
     <div class="formtitle"><span>Insert data into Student table</span></div>
 <form action="stu_insertController.php" method="post">
 <ul class="forminfo">
-<li><label>Student ID: </label><input type="text" name="student_ID" class="dfinput" /></li>
+<li><label>Student ID: </label><input type="text" name="student_ID" class="dfinput" /><i>Only intergers are allowed</i></li>
 <li><label>First Name: </label> <input type="text" name="stu_FName" class="dfinput" /></li>
 <li><label>Mid Name: </label><input type="text" name="stu_MName" class="dfinput" /></li>
 <li><label>Last Name: </label><input type="text" name="stu_LName" class="dfinput" /></li>
